--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_setting_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/daccount_setting_main_layout.xml
@@ -1,52 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    style="@style/default_layout_style"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/stb_select_black_color">
 
     <RelativeLayout
+        android:id="@+id/stb_icon_relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:background="#FF0000">
-        <TextView
-            android:id="@+id/titleDAccountSettingActivity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/str_d_account_setting_title"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="18sp"/>
+        android:gravity="center|bottom"
+        android:layout_height="@dimen/launch_relative_layout_high_size">
+
+        <ImageView
+            android:id="@+id/paring_search_image"
+            android:layout_width="@dimen/launch_stb_start_up_icon2_width"
+            android:layout_height="@dimen/launch_stb_start_up_icon2_high"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/launch_image_bottom_margin"
+            android:baselineAlignBottom="true"
+            android:src="@mipmap/stb_select_error_device_icon" />
+
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/content"
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-    </LinearLayout>
+    <TextView
+        android:id="@+id/stb_select_status_error_text"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_stb_paring_result_layout"
+        android:text="@string/str_d_account_app_not_install"
+        android:textColor="@color/stb_select_white_color"
+        android:gravity="center"
+        android:textSize="@dimen/launch_text_size"
+        android:layout_below="@+id/stb_icon_relative_layout"
+        android:layout_alignParentStart="true" />
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom"
-        android:orientation="vertical">
+    <TextView
+        android:id="@+id/d_account_app_download"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_text_layout_high_size"
+        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+        android:background="@color/stb_select_white_color"
+        android:gravity="center"
+        android:textSize="@dimen/launch_text_size"
+        android:text="@string/str_d_account_application_download"
+        android:textColor="@color/stb_select_black_color"
+        android:layout_above="@+id/use_without_login_in"
+        android:layout_marginBottom="@dimen/launch_text_bottom_margin"/>
+    <TextView
+        android:id="@+id/use_without_login_in"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_text_layout_high_size"
+        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
+        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
+        android:background="@color/stb_select_white_color"
+        android:gravity="center"
+        android:textSize="@dimen/launch_text_size"
+        android:text="@string/str_stb_no_login_use_text"
+        android:textColor="@color/stb_select_black_color"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/launch_image_bottom_margin"/>
 
-        <Button
-            android:id="@+id/dAccountDownloadDAccountSettingActivity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:text="dアカウントアプリをダウンロードする" />
-
-        <Button
-            android:id="@+id/dLoginNoUseDAccountSettingActivity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:text="ペアリングしないでアプリを利用する" />
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
