--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_error_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/stb_select_error_layout.xml
@@ -59,18 +59,29 @@
         android:textColor="@color/stb_select_black_color" />
     <CheckBox
         android:id="@+id/stb_select_error_checkBox"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/launch_stb_checkbox_high"
         android:layout_height="@dimen/launch_stb_checkbox_high"
-        android:layout_marginLeft="@dimen/launch_stb_list_start_margin"
-        android:layout_marginRight="@dimen/launch_stb_list_start_margin"
-        android:textSize="@dimen/launch_text_size"
-        android:text="@string/str_stb_next_not_display_text"
-        android:textColor="@color/stb_select_white_color"
-        android:theme="@style/CheckBox"
+        android:layout_marginStart="@dimen/launch_stb_checkbox_start_margin"
+        android:button="@null"
+        android:background="@drawable/ic_check_box_outline_blank_white_24dp"
         android:layout_marginBottom="@dimen/launch_stb_checkbox_bottom_margin"
         android:layout_marginTop="@dimen/launch_stb_checkbox_top_margin"
+        android:layout_above="@+id/use_without_paring" />
+
+    <TextView
+        android:id="@+id/launch_select_error_check_box_text"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/launch_stb_checkbox_high"
+        android:text="@string/str_stb_next_not_display_text"
+        android:textSize="@dimen/launch_text_size"
+        android:paddingStart="@dimen/launch_stb_checkbox_right_margin"
+        android:paddingEnd="@dimen/launch_text_end_padding"
+        android:gravity="center|start"
+        android:textColor="@color/stb_select_white_color"
+        android:layout_toEndOf="@+id/stb_select_error_checkBox"
         android:layout_above="@+id/use_without_paring"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginBottom="@dimen/launch_stb_checkbox_bottom_margin" />
+
 
     <TextView
         android:id="@+id/use_without_paring"
