DREM-1390 [実装]([DREM-35]レイアウト指示書の適用)グローバルメニュー
グローバルメニューのレイアウト修正を行いました。
（横幅が固定値になったため、densityの大きい端末ではメニューリストの横幅が小さく感じるかもしれません）

Change-Id: I5e6182b5e0350a452c4cc2f818b5f6fdae8bee98

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="header_background_color_red">#cc0033</color>
     <color name="header_background_color_black">#000000</color>
     <!--Global Menu-->
+    <color name="global_menu_popup_window_background_color">#ffffff</color>
     <color name="hikari_tv_and_dtv_channel_title">#00FFFF</color>
     <color name="dtv_title">#FF0000</color>
     <color name="d_animation_title">#FF8800</color>
