[DREM-42]アプリケーション情報
Change-Id: I269c02d3f57f8096488f632b1fe93107eba45a2c

--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -166,4 +166,12 @@
     <dimen name="tv_program_list_time_scrollview_width">44dp</dimen>
     <dimen name="tv_program_list_time_line_width">48dp</dimen>
     <dimen name="tv_program_list_time_line_height">25dp</dimen>
+
+    <!--アプリケーション情報-->
+    <dimen name="application_info_image_width">138dp</dimen>
+    <dimen name="application_info_image_height">138dp</dimen>
+    <dimen name="application_info_application_name_height">20dp</dimen>
+    <dimen name="application_info_application_title_text_size">16dp</dimen>
+    <dimen name="application_info_application_name_value_text_size">20dp</dimen>
+    <dimen name="application_info_application_provider_height">20dp</dimen>
 </resources>
