--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/item_watching_video.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/item_watching_video.xml
@@ -3,97 +3,73 @@
   ~ Copyright (c) 2018 NTT DOCOMO, INC. All Rights Reserved.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:id="@+id/relativeLayout"
+    android:descendantFocusability="blocksDescendants">
 
-    <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    <ImageView
+        android:id="@+id/wl_thumbnail"
+        android:layout_width="@dimen/watch_listen_thumbnail_high"
+        android:layout_height="@dimen/watch_listen_thumbnail_width"
+        android:layout_marginStart="@dimen/watch_listen_thumbnail_margin_left"
+        android:layout_marginTop="@dimen/watch_listen_thumbnail_margin_top_bottom"
+        android:layout_marginBottom="@dimen/watch_listen_thumbnail_margin_top_bottom"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:id="@+id/wl_clip"
+        android:layout_width="@dimen/clip_button_size"
+        android:layout_height="@dimen/clip_button_size"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="@dimen/clip_common_margin_left"
+        android:layout_marginEnd="@dimen/clip_common_margin_right"
+        android:src="@mipmap/icon_circle_opacity_clip"
+        android:layout_alignParentEnd="true" />
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/relativeLayout"
-        android:descendantFocusability="blocksDescendants">
+        android:layout_marginStart="@dimen/watch_listen_thumbnail_margin_left"
+        android:layout_toEndOf="@id/wl_thumbnail"
+        android:gravity="center_vertical"
+        android:layout_centerVertical="true"
+        android:layout_toStartOf="@id/wl_clip"
+        android:id="@+id/watch_listen_title_relativeLayout">
 
-        <ImageView
-            android:id="@+id/wl_thumbnail"
+        <TextView
+            android:id="@+id/wl_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:gravity="center|start"
+            android:textSize="@dimen/list_item_title_text_size"
+            android:textColor="@android:color/white" />
+
+        <RatingBar
+            android:id="@+id/wl_video_rating"
+            style="@style/roomRatingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            />
-        <!--<ProgressBar-->
-            <!--android:id="@+id/wl_progressBar"-->
-            <!--style="?android:attr/progressBarStyleHorizontal"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="2dp"-->
-            <!--android:layout_below="@+id/wl_thumbnail"-->
-            <!--android:layout_alignLeft="@id/wl_thumbnail"-->
-            <!--android:layout_alignRight="@id/wl_thumbnail"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:background="#F00"-->
-            <!--android:progress="68" />-->
+            android:numStars="5"
+            android:foregroundGravity="center"
+            android:layout_marginTop="@dimen/watch_listen_rating_margin_top"
+            android:layout_below="@+id/wl_title"
+            android:layout_alignParentStart="true" />
 
-        <ImageView
-            android:id="@+id/wl_clip"
-            android:layout_width="@dimen/clip_button_size"
-            android:layout_height="@dimen/clip_button_size"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_margin="@dimen/clip_common_margin"
-            android:src="@mipmap/icon_circle_opacity_clip"/>
-
-        <RelativeLayout
+        <TextView
+            android:id="@+id/wl_rating_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@id/wl_thumbnail"
-            android:layout_marginLeft="12dp"
-            android:layout_toLeftOf="@id/wl_clip"
-            android:layout_toRightOf="@id/wl_thumbnail"
-            android:id="@+id/relativeLayout2"
-            android:layout_alignBottom="@+id/wl_thumbnail">
-
-
-            <RatingBar
-                android:id="@+id/wl_video_rating"
-                style="@style/roomRatingBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:numStars="5"
-                android:paddingBottom="5dp"
-                android:rating="2.5"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true" />
-
-            <TextView
-                android:id="@+id/wl_rating_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/wl_video_rating"
-                android:layout_alignParentBottom="true"
-                android:layout_alignTop="@id/wl_video_rating"
-                android:layout_toRightOf="@id/wl_video_rating"
-                android:text="3.5"
-                android:textColor="@android:color/white"
-                android:textSize="10dp"/>
-
-            <TextView
-                android:id="@+id/wl_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:text="プリズン・ブレイクシーズン1第1話マイケルブレイクシーズン1第1話"
-                android:textColor="@android:color/white"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true"
-                android:gravity="center"
-                android:layout_above="@+id/wl_video_rating" />
-        </RelativeLayout>
-
-
+            android:layout_below="@+id/wl_title"
+            android:layout_toEndOf="@+id/wl_video_rating"
+            android:layout_marginTop="@dimen/watch_listen_rating_margin_top"
+            android:layout_marginStart="@dimen/watch_listen_text_margin_left"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/watch_listen_text_size"/>
     </RelativeLayout>
-
-
 </RelativeLayout>
