--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/watching_video_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/watching_video_list_main_layout.xml
@@ -6,15 +6,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000">
-
+    android:background="@color/stb_select_black_color">
 
     <ListView
         android:id="@+id/video_watching_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@drawable/list_item_divider"
-        android:dividerHeight="1dp">
+        android:dividerHeight="@dimen/watch_listen_video_divider_high">
     </ListView>
 
 </LinearLayout>
