--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -33,8 +33,10 @@
     <dimen name="launch_stb_start_up_icon2_high">44dp</dimen>
     <dimen name="launch_stb_start_up_icon2_width">163dp</dimen>
     <dimen name="clip_toast_margin">10dp</dimen>
-    <dimen name="clip_button_size">32dp</dimen>
-    <dimen name="clip_common_margin">15dp</dimen>
+    <dimen name="clip_button_size">30dp</dimen>
+    <dimen name="clip_common_margin">8dp</dimen>
+    <dimen name="clip_common_margin_left">8dp</dimen>
+    <dimen name="clip_common_margin_right">10dp</dimen>
 
     <!--Global Menu-->
     <dimen name="global_menu_list_height">44sp</dimen>
@@ -99,6 +101,16 @@
     <dimen name="contents_detail_16dp">16dp</dimen>
     <dimen name="contents_detail_icon_size">36dp</dimen>
     <dimen name="contents_detail_icon_margin">8dp</dimen>
+
+    <!-- WatchingVideoActivity -->
+    <dimen name ="watch_listen_video_divider_high">1dp</dimen>
+    <dimen name="watch_listen_thumbnail_high">127dp</dimen>
+    <dimen name="watch_listen_thumbnail_width">71dp</dimen>
+    <dimen name="watch_listen_thumbnail_margin_top_bottom">10dp</dimen>
+    <dimen name="watch_listen_thumbnail_margin_left">16dp</dimen>
+    <dimen name="watch_listen_rating_margin_top">8dp</dimen>
+    <dimen name= "watch_listen_text_size">10dp</dimen>
+    <dimen name="watch_listen_text_margin_left">2dp</dimen>
 
     <!--ビデオ一覧-->
     <dimen name="video_contents_genre_button_margin_end">15dp</dimen>
