--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/application_info_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/application_info_main_layout.xml
@@ -13,7 +13,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_centerHorizontal="true"
-		android:layout_marginTop="69.5dp">
+		android:layout_marginTop="@dimen/application_info_application_icon_margin_top">
 
 		<ImageView
 			android:id="@+id/application_info_main_layout_icon_content"
@@ -29,14 +29,13 @@
 			android:background="@drawable/app_info_icon_bg"/>
 	</RelativeLayout>
 
-
 	<TextView
 		android:id="@+id/application_info_main_layout_name"
 		android:layout_width="wrap_content"
 		android:layout_height="@dimen/application_info_application_name_height"
 		android:layout_below="@id/application_info_main_layout_icon"
 		android:layout_centerHorizontal="true"
-		android:layout_marginTop="36dp"
+		android:layout_marginTop="@dimen/application_info_application_title_margin_top"
 		android:text="@string/application_info_application_name"
 		android:textColor="@color/application_info_application_title"
 		android:textSize="@dimen/application_info_application_title_text_size"/>
@@ -47,7 +46,7 @@
 		android:layout_height="wrap_content"
 		android:layout_below="@id/application_info_main_layout_name"
 		android:layout_centerHorizontal="true"
-		android:layout_marginTop="4dp"
+		android:layout_marginTop="@dimen/application_info_application_value_margin_top"
 		android:textColor="@color/application_info_application_title_value"
 		android:textSize="@dimen/application_info_application_name_value_text_size"/>
 
@@ -57,7 +56,7 @@
 		android:layout_height="@dimen/application_info_application_provider_height"
 		android:layout_below="@id/application_info_main_layout_name_value"
 		android:layout_centerHorizontal="true"
-		android:layout_marginTop="20dp"
+		android:layout_marginTop="@dimen/application_info_application_provider_margin_top"
 		android:text="@string/application_info_application_provider"
 		android:textColor="@color/application_info_application_title"
 		android:textSize="@dimen/application_info_application_title_text_size"/>
@@ -68,7 +67,7 @@
 		android:layout_height="wrap_content"
 		android:layout_below="@id/application_info_main_layout_provider"
 		android:layout_centerHorizontal="true"
-		android:layout_marginTop="4dp"
+		android:layout_marginTop="@dimen/application_info_application_value_margin_top"
 		android:text="@string/application_info_application_provider_value"
 		android:textColor="@color/application_info_application_title_value"
 		android:textSize="@dimen/application_info_application_name_value_text_size"/>
@@ -79,7 +78,7 @@
 		android:layout_height="@dimen/application_info_application_provider_height"
 		android:layout_below="@id/application_info_main_layout_name_provider_value"
 		android:layout_centerHorizontal="true"
-		android:layout_marginTop="20dp"
+		android:layout_marginTop="@dimen/application_info_application_version_margin_top"
 		android:text="@string/application_info_application_version"
 		android:textColor="@color/application_info_application_title"
 		android:textSize="@dimen/application_info_application_title_text_size"/>
@@ -90,9 +89,8 @@
 		android:layout_height="wrap_content"
 		android:layout_below="@id/application_info_main_layout_version"
 		android:layout_centerHorizontal="true"
-		android:layout_marginTop="4dp"
+		android:layout_marginTop="@dimen/application_info_application_value_margin_top"
 		android:textColor="@color/application_info_application_title_value"
 		android:textSize="@dimen/application_info_application_name_value_text_size"/>
-
 
 </RelativeLayout>
