--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -173,4 +173,9 @@
     <dimen name="application_info_application_title_text_size">16dp</dimen>
     <dimen name="application_info_application_name_value_text_size">20dp</dimen>
     <dimen name="application_info_application_provider_height">20dp</dimen>
+    <dimen name="application_info_application_icon_margin_top">69.5dp</dimen>
+    <dimen name="application_info_application_title_margin_top">36dp</dimen>
+    <dimen name="application_info_application_value_margin_top">4dp</dimen>
+    <dimen name="application_info_application_provider_margin_top">20dp</dimen>
+    <dimen name="application_info_application_version_margin_top">20dp</dimen>
 </resources>
