--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_footer.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_recyclerview_footer.xml
@@ -8,8 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_centerVertical="true"
-        android:text="もっと見る"
-        android:textSize="12dp"
+        android:text="@string/home_contents_list_see_all"
+        android:textSize="@dimen/home_contents_see_all_text_size"
         android:gravity="center_vertical"
-        android:textColor="#FFFFFF"/>
+        android:textColor="@color/home_item_see_all_text_color"/>
 </RelativeLayout>
