--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -20,6 +20,18 @@
     <color name="custom_toast_background">#000000</color>
     <color name="header_background_color_red">#cc0033</color>
     <color name="header_background_color_black">#000000</color>
+    <!--Home画面-->
+    <color name="home_main_background_color">#1d1d1d</color>
+    <color name="home_no_contract_info_background_color">#ffffff</color>
+    <color name="home_no_contract_info_text_color">#0f0f0f</color>
+    <color name="home_contract_button_background_color">#fd0003</color>
+    <color name="home_contract_button_text_color">#ffffff</color>
+    <color name="home_item_name_text_color">#ffffff</color>
+    <color name="home_item_see_all_text_color">#ffffff</color>
+    <color name="home_item_contents_num_text_color">#c9c9c9</color>
+    <color name="home_item_contents_background_color">#121212</color>
+    <color name="home_item_contents_text_color">#ffffff</color>
+    <color name="home_item_contents_text_shadow_color">#222222</color>
     <!--Global Menu-->
     <color name="global_menu_popup_window_background_color">#ffffff</color>
     <color name="hikari_tv_and_dtv_channel_title">#00FFFF</color>
