--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -26,9 +26,9 @@
     <dimen name="launch_stb_device_font_size">16dp</dimen>
     <dimen name="launch_stb_checkbox_high">18dp</dimen>
     <dimen name="launch_stb_margin_top">32dp</dimen>
-    <dimen name ="launch_stb_progress_bar_padding">15dp</dimen>
-    <dimen name ="launch_stb_start_up_icon1_high">36dp</dimen>
-    <dimen name ="launch_stb_start_up_icon1_width">70dp</dimen>
+    <dimen name="launch_stb_progress_bar_padding">15dp</dimen>
+    <dimen name="launch_stb_start_up_icon1_high">36dp</dimen>
+    <dimen name="launch_stb_start_up_icon1_width">70dp</dimen>
     <dimen name="launch_stb_start_up_icon3_width">162dp</dimen>
     <dimen name="launch_stb_start_up_icon2_high">44dp</dimen>
     <dimen name="launch_stb_start_up_icon2_width">163dp</dimen>
@@ -72,6 +72,41 @@
     <dimen name="list_item_sort_button_layout_height">40dp</dimen>
     <dimen name="list_item_sort_button_bottom_margin">25dp</dimen>
     <dimen name="list_item_sort_button_right_margin">25dp</dimen>
+
+    <!--Home画面-->
+    <dimen name="home_no_contract_info_height">68dp</dimen>
+    <dimen name="home_no_contract_text_width">231dp</dimen>
+    <dimen name="home_no_contract_text_height">36dp</dimen>
+    <dimen name="home_no_contract_text_left_margin">16dp</dimen>
+    <dimen name="home_no_contract_text_top_margin">16dp</dimen>
+    <dimen name="home_no_contract_text_bottom_margin">16dp</dimen>
+    <dimen name="home_no_contract_text_size">12sp</dimen>
+    <dimen name="home_contract_button_width">96dp</dimen>
+    <dimen name="home_contract_button_height">32dp</dimen>
+    <dimen name="home_contract_button_left_margin">16dp</dimen>
+    <dimen name="home_contract_button_right_margin">16dp</dimen>
+    <dimen name="home_contract_button_top_margin">18dp</dimen>
+    <dimen name="home_contract_button_bottom_margin">18dp</dimen>
+    <dimen name="home_contract_button_padding_left">24px</dimen>
+    <dimen name="home_contract_button_padding_right">24px</dimen>
+    <dimen name="home_contents_item_name_top_margin">23dp</dimen>
+    <dimen name="home_contents_item_name_bottom_margin">16dp</dimen>
+    <dimen name="home_contents_left_margin">16dp</dimen>
+    <dimen name="home_contents_right_margin">10dp</dimen>
+    <dimen name="home_contents_item_name_text_size">16sp</dimen>
+    <dimen name="home_contents_item_num_right_margin">4dp</dimen>
+    <dimen name="home_contents_item_num_text_size">14sp</dimen>
+    <dimen name="home_contents_item_right_arrow_size">24dp</dimen>
+    <dimen name="home_contents_see_all_text_size">12sp</dimen>
+    <dimen name="home_contents_thumbnail_width">243dp</dimen>
+    <dimen name="home_contents_thumbnail_height">147dp</dimen>
+    <dimen name="home_contents_thumbnail_left_padding">0dp</dimen>
+    <dimen name="home_contents_thumbnail_right_padding">8dp</dimen>
+    <dimen name="home_contents_thumbnail_title_left_margin">16dp</dimen>
+    <dimen name="home_contents_thumbnail_title_right_margin">16dp</dimen>
+    <dimen name="home_contents_thumbnail_text_bottom_margin">10dp</dimen>
+    <dimen name="home_contents_thumbnail_text_size">18sp</dimen>
+    <dimen name="home_contents_thumbnail_title_bottom_margin">4dp</dimen>
 
     <!--Custom Dialog-->
     <dimen name="custom_dialog_padding">5dp</dimen>
