--- a/dTVTerminalApp/app/src/main/res/layout/ranking/layout/weekly_tv_ranking_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/ranking/layout/weekly_tv_ranking_main_layout.xml
@@ -14,6 +14,13 @@
         android:foregroundGravity="center_horizontal"
         android:scrollbars="none" />
 
+    <ProgressBar
+        android:id="@+id/weekly_ranking_progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_weekly_ranking_result"
         android:layout_width="match_parent"
