--- a/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/edit_my_channel_list_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/tvprogram/layout/edit_my_channel_list_item.xml
@@ -10,42 +10,36 @@
 
 	<RelativeLayout
 		android:id="@+id/edit_my_channel_list_item_no"
-		android:layout_width="40dp"
-		android:layout_height="50dp"
+		android:layout_width="@dimen/edit_my_channel_list_item_no_width"
+		android:layout_height="@dimen/edit_my_channel_list_item_no_height"
 		android:layout_centerVertical="true"
-		android:background="@android:color/black">
+		android:background="@color/item_num_black">
 
 		<TextView
 			android:id="@+id/edit_my_channel_list_item_no_tv"
-			android:layout_width="30dp"
-			android:layout_height="30dp"
+			android:layout_width="@dimen/edit_my_channel_list_item_no_tv_width"
+			android:layout_height="@dimen/edit_my_channel_list_item_no_tv_width"
 			android:layout_centerInParent="true"
-			android:background="#333333"
+			android:background="@color/item_num_unregister_bg_black"
 			android:gravity="center"
-			android:text="1"
 			android:textColor="@android:color/white"/>
 	</RelativeLayout>
-
-
+	
 	<RelativeLayout
 		android:layout_width="match_parent"
-		android:layout_height="35dp"
+		android:layout_height="wrap_content"
 		android:layout_alignBottom="@id/edit_my_channel_list_item_no"
 		android:layout_alignTop="@id/edit_my_channel_list_item_no"
-		android:layout_marginLeft="10dp"
 		android:layout_toEndOf="@id/edit_my_channel_list_item_no"
-		android:background="@drawable/rectangele_all">
+		android:background="@drawable/my_ch_item_bottom_line">
 
 		<Button
 			android:id="@+id/edit_my_channel_list_item_edit_bt"
-			android:layout_width="30dp"
-			android:layout_height="30dp"
+			android:layout_width="@dimen/edit_my_channel_list_item_add_btn_width"
+			android:layout_height="@dimen/edit_my_channel_list_item_add_btn_width"
 			android:layout_alignParentEnd="true"
 			android:layout_centerVertical="true"
-			android:layout_marginEnd="10dp"
-			android:textColor="@android:color/white"
-			android:background="@drawable/edit_channel_list_item_bt_style"
-			android:text="+"/>
+			android:layout_marginEnd="@dimen/edit_my_channel_list_item_add_btn_margin_right"/>
 
 		<TextView
 			android:id="@+id/edit_my_channel_list_item_channel_name_tv"
@@ -55,8 +49,8 @@
 			android:gravity="center_vertical"
 			android:maxLines="1"
 			android:ellipsize="end"
-			android:textColor="@android:color/white"
-			android:textSize="15dp"/>
+			android:textColor="@color/white_text"
+			android:textSize="@dimen/edit_my_channel_list_item_text_size"/>
 
 	</RelativeLayout>
 </RelativeLayout>
