変更していたリソース名の修正
グローバルメニュー内で使用していなかったリソースがあったため、併せて対応しています。

Change-Id: Iaa446faee23dfd1d8ae8b7054d6dc427fd8de404

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout_item.xml
@@ -40,7 +40,7 @@
             android:layout_height="@dimen/home_contents_item_right_arrow_size"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:src="@mipmap/menu_forward" />
+            android:src="@mipmap/icon_normal_arrow_next_prev" />
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
