--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -40,7 +40,7 @@
 
     <!--Global Menu-->
     <dimen name="global_menu_list_height">44sp</dimen>
-    <dimen name="global_menu_list_right_arrow_icon_size">30sp</dimen>
+    <dimen name="global_menu_list_right_arrow_icon_size">30dp</dimen>
     <dimen name="global_menu_list_item_default_title_left_margin">16sp</dimen>
     <dimen name="global_menu_list_item_sub_title_left_margin">32sp</dimen>
     <dimen name="global_menu_list_item_dazn_title_left_margin">8sp</dimen>
