--- a/dTVTerminalApp/app/src/main/res/drawable/my_ch_btn_selector.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/my_ch_btn_selector.xml
@@ -4,7 +4,7 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:drawable="@mipmap/add_my_ch_btn_press"
+	<item android:drawable="@mipmap/icon_circle_active_plus"
 	      android:state_pressed="true"/>
-	<item android:drawable="@mipmap/add_my_ch_btn"/>
+	<item android:drawable="@mipmap/icon_circle_normal_plus"/>
 </selector>
