--- a/dTVTerminalApp/app/src/main/res/drawable/indicating.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/indicating.xml
@@ -3,13 +3,13 @@
 
 	<item>
 		<shape>
-			<solid android:color="#CCCCCC"/>
+			<solid android:color="@color/common_tab_indicating_color" />
 		</shape>
 	</item>
 	<!-- 本体バックグラウンド色値 -->
-	<item android:bottom="1.5dp">
+	<item android:bottom="1dp">
 		<shape>
-			<solid android:color="#111111"/>
+			<solid android:color="@color/common_tab_background_color"/>
 		</shape>
 	</item>
 
