--- a/dTVTerminalApp/app/src/main/res/drawable/indicating_no.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/indicating_no.xml
@@ -2,13 +2,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 	<item>
 		<shape>
-			<solid android:color="#000000"/>
+			<solid android:color="@color/common_tab_indicating_no_color"/>
 		</shape>
 	</item>
 	<!-- 本体バックグラウンド色値 -->
 	<item android:bottom="1dp">
 		<shape>
-			<solid android:color="#000000"/>
+			<solid android:color="@color/common_tab_background_color"/>
 		</shape>
 	</item>
 
