--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -20,6 +20,12 @@
     <color name="custom_toast_background">#000000</color>
     <color name="header_background_color_red">#ff0000</color>
     <color name="header_background_color_black">#000000</color>
+    <color name="common_tab_background_color">#222222</color>
+    <color name="common_tab_select_text_color">#999999</color>
+    <color name="common_tab_unselect_text_color">#FFFFFF</color>
+    <color name="common_tab_indicating_no_color">#666666</color>
+    <color name="common_tab_indicating_color">#FFFFFF</color>
+
     <!--Global Menu-->
     <color name="hikari_tv_and_dtv_channel_title">#00FFFF</color>
     <color name="dtv_title">#FF0000</color>
