--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -129,10 +129,19 @@
 
     <!--タブ共通UI-->
     <dimen name="list_tab_start_margin_left">20dp</dimen>
-    <dimen name="list_tab_margin_left">15dp</dimen>
+    <dimen name="list_tab_margin_left">16dp</dimen>
     <dimen name="list_tab_margin_top">0dp</dimen>
     <dimen name="list_tab_margin_right">0dp</dimen>
     <dimen name="list_tab_margin_bottom">0dp</dimen>
+    <dimen name="list_tab_margin_right_last">16dp</dimen>
+    <dimen name="list_tab_padding_left">0dp</dimen>
+    <dimen name="list_tab_padding_top">0dp</dimen>
+    <dimen name="list_tab_padding_right">0dp</dimen>
+    <dimen name="list_tab_padding_bottom">0dp</dimen>
+    <dimen name="list_tab_text_area_height">30dp</dimen>
+    <dimen name="list_tab_text_size">15sp</dimen>
+    <dimen name="list_tab_scroll_area_height">50dp</dimen>
+    <dimen name="list_tab_scroll_area_padding_top">20dp</dimen>
 
     <!--リモコン-->
     <dimen name="remote_controller_header_view_high">50dp</dimen>
@@ -148,4 +157,18 @@
     <dimen name="main_setting_list_checkbox_length">32dp</dimen>
     <dimen name="main_setting_checkbox_margin">10dp</dimen>
     <dimen name="main_setting_quality_list_separate">1dp</dimen>
+
+    <!-- 検索画面 -->
+    <dimen name="search_form_height">40dp</dimen>
+    <dimen name="search_form_margin_top">16dp</dimen>
+    <dimen name="search_form_margin_bottom">16dp</dimen>
+    <dimen name="search_form_margin_left">16dp</dimen>
+    <dimen name="search_form_margin_right">16dp</dimen>
+    <dimen name="search_result_list_border_height">1dp</dimen>
+    <dimen name="search_result_count_text_margin_top">16dp</dimen>
+    <dimen name="search_result_count_text_margin_buttom">10dp</dimen>
+    <dimen name="search_result_count_text_margin_left">16dp</dimen>
+    <dimen name="search_result_count_text_margin_right">0dp</dimen>
+    <dimen name="search_result_count_text_size">14sp</dimen>
+
 </resources>
