--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -57,7 +57,8 @@
     <dimen name="main_header_menu_padding_end">8dp</dimen>
     <dimen name="header_title_text_size">16dp</dimen>
     <dimen name="list_item_title_text_size">14sp</dimen>
-    <dimen name="list_item_time_text_size">12sp</dimen>
+    <dimen name="list_item_time_text_size">12dp</dimen>
+    <dimen name="list_item_today_ranking_time_size">12dp</dimen>
     <dimen name="list_item_rank_num_text_size">10sp</dimen>
     <dimen name="list_item_rating_num_text_size">9sp</dimen>
     <dimen name="list_item_time_start_margin">5dp</dimen>
@@ -146,6 +147,15 @@
     <dimen name="watch_listen_rating_margin_top">8dp</dimen>
     <dimen name= "watch_listen_text_size">10dp</dimen>
     <dimen name="watch_listen_text_margin_left">2dp</dimen>
+    <dimen name="watch_listen_rank_num_high">18dp</dimen>
+    <dimen name="watch_listen_rank_num_width">24dp</dimen>
+    <dimen name="watch_listen_rank_num_margin_start">20dp</dimen>
+    <dimen name="watch_listen_rank_num_margin_top">15dp</dimen>
+    <dimen name="watch_listen_linear_layout_margin_top">17dp</dimen>
+    <dimen name="watch_listen_result_content_title">14dp</dimen>
+    <dimen name="watch_listen_result_content_text_padding_top">2dp</dimen>
+    <dimen name="watch_listen_result_content_rating_margin_top">4dp</dimen>
+
 
     <!--ビデオ一覧-->
     <dimen name="video_contents_genre_button_margin_end">15dp</dimen>
@@ -163,8 +173,8 @@
     <dimen name="recording_reservation_list_status_width">60dp</dimen>
     <dimen name="recording_reservation_list_status_height">25dp</dimen>
     <dimen name="recording_reservation_list_status_margin_end">8dp</dimen>
-    <dimen name="list_item_channel_name_text_size">13sp</dimen>
-    <dimen name="list_item_recording_reservation_status_text_size">12sp</dimen>
+    <dimen name="list_item_channel_name_text_size">14dp</dimen>
+    <dimen name="list_item_recording_reservation_status_text_size">12dp</dimen>
 
     <!--録画番組-->
     <dimen name="recorded_contents_dividerHeight">1dp</dimen>
