--- a/dTVTerminalApp/app/src/main/res/drawable/contents_provider_shape_corner.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/contents_provider_shape_corner.xml
@@ -4,10 +4,10 @@
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FF0000" />
+    <solid android:color="@color/contents_player_now_on_air_color" />
     <corners
-        android:radius="2dp"/>
+        android:radius="@dimen/contents_detail_player_now_on_air_radius"/>
     <stroke
-        android:width="1dp"
-        android:color="#FF0000" />
+        android:width="@dimen/contents_detial_player_now_on_air_stroke_width"
+        android:color="@color/contents_player_now_on_air_color" />
 </shape>
