--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/tv_player_ctrl_video_record.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/tv_player_ctrl_video_record.xml
@@ -6,21 +6,21 @@
     android:id="@+id/tv_player_main_layout_video_ctrl_player_video_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent">
+    android:background="@color/contents_player_background_color">
 
     <TextView
         android:id="@+id/tv_player_main_layout_video_ctrl_player_now_on_air_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="@dimen/contents_detial_player_now_on_air_width"
+        android:layout_height="@dimen/contents_detial_player_now_on_air_height"
+        android:layout_marginStart="@dimen/contents_detail_player_now_on_air_start_margin"
+        android:layout_marginTop="@dimen/contents_detail_player_now_on_air_top_margin"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:gravity="center"
         android:background="@drawable/contents_provider_shape_corner"
-        android:paddingBottom="2dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="2dp"
         android:text="@string/now_on_air"
-        android:textColor="@android:color/white" />
+        android:textColor="@color/contents_player_now_on_air_text_color"
+        android:textSize="@dimen/contents_detail_player_now_on_air_text_size" />
 
     <FrameLayout
         android:id="@+id/tv_player_ctrl_video_record_player_pause_fl"
@@ -29,127 +29,85 @@
         android:layout_centerInParent="true">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@mipmap/ic_tvplayer_player_play" />
+            android:layout_width="@dimen/contents_detail_player_media_controller_size"
+            android:layout_height="@dimen/contents_detail_player_media_controller_size"
+            android:background="@mipmap/mediacontrol_icon_white_play_arrow" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@mipmap/ic_tvplayer_player_pause"
+            android:layout_width="@dimen/contents_detail_player_media_controller_size"
+            android:layout_height="@dimen/contents_detail_player_media_controller_size"
+            android:background="@mipmap/mediacontrol_icon_white_stop"
             android:visibility="gone" />
     </FrameLayout>
 
-    <TextView
+    <ImageView
         android:id="@+id/tv_player_ctrl_video_record_10_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginEnd="30dp"
+        android:layout_width="@dimen/contents_detail_player_media_controller_size"
+        android:layout_height="@dimen/contents_detail_player_media_controller_size"
         android:layout_toStartOf="@id/tv_player_ctrl_video_record_player_pause_fl"
-        android:text="10"
-        android:textColor="@android:color/white"
-        android:textSize="20dp" />
+        android:layout_centerVertical="true"
+        android:background="@mipmap/mediacontrol_icon_white_replay_10"
+        android:layout_marginEnd="@dimen/contents_detail_player_media_controller_replay_right_margin" />
 
     <ImageView
-        android:id="@+id/tv_player_ctrl_video_record_rewind_iv"
-        android:layout_width="20dp"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginEnd="10dp"
-        android:layout_toStartOf="@id/tv_player_ctrl_video_record_10_tv"
-        android:background="@mipmap/ic_tvplayer_rewind_left" />
-
-    <TextView
         android:id="@+id/tv_player_ctrl_video_record_30_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="30dp"
+        android:layout_width="@dimen/contents_detail_player_media_controller_size"
+        android:layout_height="@dimen/contents_detail_player_media_controller_size"
         android:layout_toEndOf="@id/tv_player_ctrl_video_record_player_pause_fl"
-        android:text="30"
-        android:textColor="@android:color/white"
-        android:textSize="20dp" />
-
-    <ImageView
-        android:id="@+id/tv_player_ctrl_video_record_fast_iv"
-        android:layout_width="20dp"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="10dp"
-        android:layout_toEndOf="@id/tv_player_ctrl_video_record_30_tv"
-        android:background="@mipmap/ic_tvplayer_fast_right" />
+        android:layout_centerVertical="true"
+        android:background="@mipmap/mediacontrol_icon_white_forward_30"
+        android:layout_marginStart="@dimen/contents_detail_player_media_controller_forward_right_margin" />
 
     <RelativeLayout
         android:id="@+id/tv_player_ctrl_video_record_control_bar_iv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/tv_player_ctrl_now_on_air_cur_time_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:background="@android:color/transparent"
-            android:text="10:22"
-            android:textColor="@android:color/white" />
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="@dimen/contents_detail_player_media_controller_time_left_margin"
+            android:layout_marginBottom="@dimen/contents_detail_player_media_controller_time_bottom_margin"
+            android:background="@color/contents_player_now_on_air_cur_text_backgroud_color"
+            android:textColor="@color/contents_player_media_controller_time_text" />
 
         <ImageView
             android:id="@+id/tv_player_ctrl_now_on_air_full_screen_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/tv_player_ctrl_now_on_air_cur_time_tv"
+            android:layout_width="@dimen/contents_detail_player_media_controller_full_screen_icon_size"
+            android:layout_height="@dimen/contents_detail_player_media_controller_full_screen_icon_size"
             android:layout_alignParentEnd="true"
-            android:layout_alignTop="@id/tv_player_ctrl_now_on_air_cur_time_tv"
-            android:layout_marginEnd="30dp"
-            android:background="@mipmap/ic_tvplayer_full_screen" />
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="@dimen/contents_detail_player_media_controller_full_screen_icon_right_margin"
+            android:layout_marginBottom="@dimen/contents_detail_player_media_controller_full_screen_icon_bottom_margin"
+            android:background="@mipmap/icon_normal_zoom_in" />
 
         <TextView
             android:id="@+id/tv_player_ctrl_now_on_air_total_time_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
             android:layout_toStartOf="@id/tv_player_ctrl_now_on_air_full_screen_iv"
-            android:background="@android:color/transparent"
-            android:text="59:22"
-            android:textColor="@android:color/white" />
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="@dimen/contents_detail_player_media_controller_time_right_margin"
+            android:layout_marginBottom="@dimen/contents_detail_player_media_controller_time_bottom_margin"
+            android:background="@color/contents_player_now_on_air_total_text_backgroud_color"
+            android:textColor="@color/contents_player_media_controller_time_text" />
 
         <RelativeLayout
             android:id="@+id/tv_player_ctrl_progress_ll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_alignParentBottom="true" >
             <SeekBar
                 android:id="@+id/tv_player_ctrl_now_on_air_seek_bar_sb"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:layout_marginTop="40dp"
                 android:max="100"
-                android:maxHeight="1dp"
-                android:minHeight="1dp"
-                android:paddingEnd="0dp"
-                android:paddingStart="0dp"
+                android:maxHeight="@dimen/contents_detail_player_media_controller_seekbar_height"
+                android:minHeight="@dimen/contents_detail_player_media_controller_seekbar_height"
                 android:progressDrawable="@drawable/player_progress_style"
                 android:thumb="@drawable/seek_bar_thumb_style" />
         </RelativeLayout>
     </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/tv_player_ctrl_video_record_control_bar_iv"
-        android:layout_centerVertical="true"
-        android:layout_toStartOf="@id/tv_player_ctrl_video_record_player_pause_fl"></RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/tv_player_ctrl_video_record_control_bar_iv"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@id/tv_player_ctrl_video_record_player_pause_fl">
-
-    </RelativeLayout>
-
 </RelativeLayout>
