--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -44,13 +44,13 @@
     <dimen name="clip_common_margin_right">10dp</dimen>
 
     <!--Global Menu-->
-    <dimen name="global_menu_list_height">44sp</dimen>
+    <dimen name="global_menu_list_height">44dp</dimen>
     <dimen name="global_menu_list_right_arrow_icon_size">30dp</dimen>
-    <dimen name="global_menu_list_item_default_title_left_margin">16sp</dimen>
-    <dimen name="global_menu_list_item_sub_title_left_margin">32sp</dimen>
-    <dimen name="global_menu_list_item_dazn_title_left_margin">8sp</dimen>
-    <dimen name="global_menu_list_item_count_right_margin">6sp</dimen>
-    <dimen name="global_menu_list_item_title_icon_left_margin">32sp</dimen>
+    <dimen name="global_menu_list_item_default_title_left_margin">16dp</dimen>
+    <dimen name="global_menu_list_item_sub_title_left_margin">32dp</dimen>
+    <dimen name="global_menu_list_item_dazn_title_left_margin">8dp</dimen>
+    <dimen name="global_menu_list_item_count_right_margin">6dp</dimen>
+    <dimen name="global_menu_list_item_title_icon_left_margin">32dp</dimen>
 
     <!--Common-->
     <dimen name="main_header_height">44dp</dimen>
@@ -86,7 +86,7 @@
     <dimen name="home_no_contract_text_left_margin">16dp</dimen>
     <dimen name="home_no_contract_text_top_margin">16dp</dimen>
     <dimen name="home_no_contract_text_bottom_margin">16dp</dimen>
-    <dimen name="home_no_contract_text_size">12sp</dimen>
+    <dimen name="home_no_contract_text_size">12dp</dimen>
     <dimen name="home_contract_button_width">96dp</dimen>
     <dimen name="home_contract_button_height">32dp</dimen>
     <dimen name="home_contract_button_left_margin">16dp</dimen>
@@ -99,11 +99,11 @@
     <dimen name="home_contents_item_name_bottom_margin">16dp</dimen>
     <dimen name="home_contents_left_margin">16dp</dimen>
     <dimen name="home_contents_right_margin">10dp</dimen>
-    <dimen name="home_contents_item_name_text_size">16sp</dimen>
+    <dimen name="home_contents_item_name_text_size">16dp</dimen>
     <dimen name="home_contents_item_num_right_margin">4dp</dimen>
-    <dimen name="home_contents_item_num_text_size">14sp</dimen>
+    <dimen name="home_contents_item_num_text_size">14dp</dimen>
     <dimen name="home_contents_item_right_arrow_size">24dp</dimen>
-    <dimen name="home_contents_see_all_text_size">12sp</dimen>
+    <dimen name="home_contents_see_all_text_size">12dp</dimen>
     <dimen name="home_contents_thumbnail_width">243dp</dimen>
     <dimen name="home_contents_thumbnail_height">147dp</dimen>
     <dimen name="home_contents_thumbnail_left_padding">0dp</dimen>
@@ -111,7 +111,7 @@
     <dimen name="home_contents_thumbnail_title_left_margin">16dp</dimen>
     <dimen name="home_contents_thumbnail_title_right_margin">16dp</dimen>
     <dimen name="home_contents_thumbnail_text_bottom_margin">10dp</dimen>
-    <dimen name="home_contents_thumbnail_text_size">18sp</dimen>
+    <dimen name="home_contents_thumbnail_text_size">18dp</dimen>
     <dimen name="home_contents_thumbnail_title_bottom_margin">4dp</dimen>
 
     <!--コンテンツ詳細-->
@@ -154,6 +154,24 @@
     <dimen name="contents_detail_player_logo_height">27dp</dimen>
     <dimen name="contents_detail_player_logo_start_margin">16dp</dimen>
     <dimen name="contents_detail_player_logo_top_margin">26dp</dimen>
+    <dimen name="contents_detail_player_now_on_air_radius">2dp</dimen>
+    <dimen name="contents_detial_player_now_on_air_stroke_width">1dp</dimen>
+    <dimen name="contents_detial_player_now_on_air_width">92dp</dimen>
+    <dimen name="contents_detial_player_now_on_air_height">20dp</dimen>
+    <dimen name="contents_detail_player_now_on_air_start_margin">8dp</dimen>
+    <dimen name="contents_detail_player_now_on_air_top_margin">8dp</dimen>
+    <dimen name="contents_detail_player_now_on_air_text_size">12dp</dimen>
+    <dimen name="contents_detail_player_media_controller_size">56dp</dimen>
+    <dimen name="contents_detail_player_media_controller_text_size">16dp</dimen>
+    <dimen name="contents_detail_player_media_controller_replay_right_margin">35dp</dimen>
+    <dimen name="contents_detail_player_media_controller_forward_right_margin">34dp</dimen>
+    <dimen name="contents_detail_player_media_controller_time_left_margin">8dp</dimen>
+    <dimen name="contents_detail_player_media_controller_time_right_margin">18dp</dimen>
+    <dimen name="contents_detail_player_media_controller_time_bottom_margin">19dp</dimen>
+    <dimen name="contents_detail_player_media_controller_seekbar_height">2dp</dimen>
+    <dimen name="contents_detail_player_media_controller_full_screen_icon_size">20dp</dimen>
+    <dimen name="contents_detail_player_media_controller_full_screen_icon_right_margin">22dp</dimen>
+    <dimen name="contents_detail_player_media_controller_full_screen_icon_bottom_margin">20dp</dimen>
     <dimen name="contents_detail_watch_dtv_image_width">50dp</dimen>
     <dimen name="contents_detail_watch_dtv_image_height">50dp</dimen>
 
@@ -174,7 +192,6 @@
     <dimen name="watch_listen_result_content_title">14dp</dimen>
     <dimen name="watch_listen_result_content_text_padding_top">2dp</dimen>
     <dimen name="watch_listen_result_content_rating_margin_top">4dp</dimen>
-
 
     <!--ビデオ一覧-->
     <dimen name="video_contents_genre_button_margin_end">15dp</dimen>
@@ -232,8 +249,8 @@
     <dimen name="main_setting_text_end_margin">6dp</dimen>
     <dimen name="main_setting_list_height">44dp</dimen>
     <dimen name="main_setting_list_divider_height">1dp</dimen>
-    <dimen name="main_setting_list_item_textsize">16sp</dimen>
-    <dimen name="main_setting_list_status_textsize">11sp</dimen>
+    <dimen name="main_setting_list_item_textsize">16dp</dimen>
+    <dimen name="main_setting_list_status_textsize">11dp</dimen>
     <dimen name="main_setting_list_checkbox_length">32dp</dimen>
     <dimen name="main_setting_checkbox_margin">10dp</dimen>
     <dimen name="main_setting_quality_list_separate">1dp</dimen>
