DREM-996 [その他作業] 画面遷移トランジションの統一
各画面間遷移のトランジションアニメーションの動作を統一しました。

Change-Id: I52c31b6e1754ac32f3f0537557d5a72e6525c152

--- a/dTVTerminalApp/app/src/main/res/values/styles.xml
+++ b/dTVTerminalApp/app/src/main/res/values/styles.xml
@@ -7,6 +7,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowDisablePreview">true</item>
+
+        <!-- テーマにトランジションアニメを定義 -->
+        <item name="android:windowAnimationStyle">@style/GeneralAnimation</item>
     </style>
 
     <style name="AnimationRightFade">
@@ -105,4 +108,13 @@
         <item name="android:textSize">@dimen/recording_reservation_dialog_item_text_size</item>
     </style>
     -->
+
+    <!-- 標準アクティビティトランジション指定 -->
+    <style name="GeneralAnimation" parent="android:Animation.Activity">
+        <!-- 既存のグローバルメニュー表示アニメーションを流用 -->
+        <item name="android:activityOpenEnterAnimation">@anim/in_righttoleft</item>
+        <item name="android:activityOpenExitAnimation">@anim/out_lefttoright</item>
+        <item name="android:activityCloseExitAnimation">@anim/out_lefttoright</item>
+        <item name="android:activityCloseEnterAnimation">@anim/in_righttoleft</item>
+    </style>
 </resources>
